FIX: nginx config and DC config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,20 +21,23 @@ server {
         index  index.html index.htm;
     }
 
-    # Reverse proxy to Grafana (optional)
+    # Reverse proxy to Grafana
     location /grafana/ {
         proxy_pass http://grafana:3000/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $http_host;
     }
 
-    # Reverse proxy to Prometheus (optional, use with caution)
+    # Reverse proxy to Prometheus
     location /prometheus/ {
         proxy_pass http://prometheus:9090/;
-        proxy_set_header Host $host;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     error_page   500 502 503 504  /50x.html;
