Fix: grafana config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - GF_SECURITY_ADMIN_USER=${GRAFANA_ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_ROOT_URL=https://monitoring.yourdomain.com/grafana/
+      - GF_SERVER_ROOT_URL=https://watcher.wbert.xyz/grafana/
       - GF_SERVER_SERVE_FROM_SUB_PATH=true
     ports:
       - "${GRAFANA_PORT:-3000}:3000"
