--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,10 +11,12 @@ server {
     }
 }
 
-# Main server block
 server {
     listen 86;
     server_name _;
+    
+    # Fix for Docker port mapping redirects
+    absolute_redirect off; 
 
     location / {
         root   /usr/share/nginx/html;
@@ -23,17 +25,18 @@ server {
 
     # Reverse proxy to Grafana
     location /grafana/ {
-        proxy_pass http://grafana:3000/;
+        # REMOVED the trailing slash at the end
+        proxy_pass http://grafana:3000; 
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $http_host;
     }
 
     # Reverse proxy to Prometheus
     location /prometheus/ {
-        proxy_pass http://prometheus:9090/;
+        # REMOVED the trailing slash at the end
+        proxy_pass http://prometheus:9090;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
